crates/solidity/testing/snapshots/cst_output/Expression/keyword_reference/v2/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected ReferenceKeyword_Reserved. One of AddressKeyword_Reserved, AtKeyword_Unreserved, Bang, BoolKeyword_Reserved, BytesKeyword_Reserved, DecimalLiteral, DeleteKeyword_Reserved, DoubleQuotedHexStringLiteral, DoubleQuotedStringLiteral, DoubleQuotedUnicodeStringLiteral, ErrorKeyword_Unreserved, FalseKeyword_Reserved, FinneyKeyword_Unreserved, FixedKeyword_Reserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, HexLiteral, Identifier, IntKeyword_Reserved, LayoutKeyword_Unreserved, Minus, MinusMinus, NewKeyword_Reserved, OpenBracket, OpenParen, PayableKeyword_Reserved, PlusPlus, RevertKeyword_Unreserved, SingleQuotedHexStringLiteral, SingleQuotedStringLiteral, SingleQuotedUnicodeStringLiteral, StringKeyword_Reserved, SuperKeyword_Reserved, SzaboKeyword_Unreserved, ThisKeyword_Reserved, Tilde, TransientKeyword_Unreserved, TrueKeyword_Reserved, TypeKeyword_Reserved, UfixedKeyword_Reserved, UintKeyword_Reserved was expected
   ╭─[crates/solidity/testing/snapshots/cst_output/Expression/keyword_reference/input.sol:1:1]
   │
 1 │ reference
   │ ────┬────  
   │     ╰────── Error occurred here.
───╯
